# cppbackend-game

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
src/: app.cpp  app.h  collision_detector.cpp  collision_detector.h  db.h  extra_data.cpp  extra_data.h  geom.h  http_server.cpp  http_server.h  json_loader.cpp  log.cpp  log.h  loot_generator.h  main.cpp  model.cpp  model.h  model_serialization.cpp  model_serialization.h  postgres.cpp  postgres.h  request_handler.cpp  request_handler.h  retirement.cpp  retirement.h  serialization.cpp  serialization.h  ticker.cpp  ticker.h
tests/: state-serialization-tests.cpp
